--- a/pom.xml
+++ b/pom.xml
@@ -77,40 +77,80 @@
         </dependency>
 
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.4.0</version>
-                <executions>
-                    <execution>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <classpathScope>test</classpathScope>
-                    <mainClass>cucumber.api.cli.Main</mainClass>
-                    <arguments>
-                        <argument>--dry-run</argument>
-                        <argument>--snippets</argument>
-                        <argument>camelcase</argument>
-                        <argument>--plugin</argument>
-                        <argument>pretty</argument>
-                        <argument>--plugin</argument>
-                        <argument>json:target/json-report/cucumber.json</argument>
-                        <argument>--strict</argument>
-                        <argument>--glue</argument>
-                        <argument>com.dumitruc.training.stepdefs</argument>
-                        <argument>src/test/resources/features</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
+    <profiles>
+        <profile>
+            <id>cucumber-cli-exec</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.4.0</version>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <classpathScope>test</classpathScope>
+                            <mainClass>cucumber.api.cli.Main</mainClass>
+                            <arguments>
+                                <argument>--dry-run</argument>
+                                <argument>--snippets</argument>
+                                <argument>camelcase</argument>
+                                <argument>--plugin</argument>
+                                <argument>pretty</argument>
+                                <argument>--plugin</argument>
+                                <argument>json:target/json-report/cucumber.json</argument>
+                                <argument>--strict</argument>
+                                <argument>--glue</argument>
+                                <argument>com.dumitruc.training.stepdefs</argument>
+                                <argument>src/test/resources/features</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>local-report</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>net.masterthought</groupId>
+                        <artifactId>maven-cucumber-reporting</artifactId>
+                        <version>0.0.4</version>
+                        <executions>
+                            <execution>
+                                <id>execution</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
+                                    <projectName>cucumber-jvm-example</projectName>
+                                    <outputDirectory>${project.build.directory}/cucumber-html-reports</outputDirectory>
+                                    <cucumberOutput>${project.build.directory}/json-report/cucumber.json</cucumberOutput>
+                                    <enableFlashCharts>false</enableFlashCharts>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
