--- a/pom.xml
+++ b/pom.xml
@@ -130,9 +130,16 @@
                         </configuration>
                     </plugin>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
+                    </plugin>
+                    <plugin>
                         <groupId>net.masterthought</groupId>
                         <artifactId>maven-cucumber-reporting</artifactId>
-                        <version>0.0.4</version>
+                        <version>0.1.0</version>
                         <executions>
                             <execution>
                                 <id>execution</id>
@@ -148,6 +155,19 @@
                                 </configuration>
                             </execution>
                         </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>net.masterthought</groupId>
+                                <artifactId>cucumber-reporting</artifactId>
+                                <version>0.4.0</version>
+                                <exclusions>
+                                    <exclusion>
+                                        <groupId>com.googlecode.totallylazy</groupId>
+                                        <artifactId>totallylazy</artifactId>
+                                    </exclusion>
+                                </exclusions>
+                            </dependency>
+                        </dependencies>
                     </plugin>
                 </plugins>
             </build>
